fix: self updater getting stuck when closing modal too soon
